# shell-cpp

./: CMakeLists.txt  README.md  file name
include/: shell.h
src/: command.cpp  main.cpp  parser.cpp  shell.cpp  shell.hpp  utils.cpp
src/builtins/: builtins.h  echo.cpp  exit.cpp  pwd.cpp  type.cpp
src/builtins/navigation/: cd.cpp  navigation.cpp  navigation.h  pwd.cpp
src/utils/: command.cpp  command.h  path.cpp  path.h  string.cpp  string.h
